--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -31,7 +31,7 @@
     <Color x:Key="PopupBorderColor">#3e6184</Color>
     <Color x:Key="BackgroundToneColor">#2C3A67</Color>
     <Color x:Key="GridItemBackgroundColor">#151e3d</Color>
-    <Color x:Key="PanelSeparatorColor">#662C3A67</Color>
+    <Color x:Key="PanelSeparatorColor">#16181A</Color>
 
 
     <!--region Custom theme colors-->
