--- a/source/DerivedStyles/DetailsViewItemStyle.xaml
+++ b/source/DerivedStyles/DetailsViewItemStyle.xaml
@@ -7,6 +7,7 @@
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="FontSize" Value="{DynamicResource FontSizeLarge}" />
         <Setter Property="Background" Value="{DynamicResource DetailsViewItemBackgroundBrush}" />
+        <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
