--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -30,7 +30,7 @@
     <Color x:Key="PopupBackgroundColor">#171e26</Color>
     <Color x:Key="PopupBorderColor">#3e6184</Color>
     <Color x:Key="BackgroundToneColor">#2C3A67</Color>
-    <Color x:Key="GridItemBackgroundColor">#151e3d</Color>
+    <Color x:Key="GridItemBackgroundColor">#3D4450</Color>
     <Color x:Key="PanelSeparatorColor">#16181A</Color>
 
 
@@ -165,7 +165,11 @@
     <SolidColorBrush x:Key="PopupBorderBrush" Color="{DynamicResource PopupBorderColor}" />
     <SolidColorBrush x:Key="TooltipBackgroundBrush" Color="{DynamicResource BackgroundToneColor}" />
     
-    <SolidColorBrush x:Key="GridItemBackgroundBrush" Color="{DynamicResource GridItemBackgroundColor}" />
+    <LinearGradientBrush x:Key="GridItemBackgroundBrush" StartPoint="0.0, 0.0" EndPoint="1.0, 0.0" >
+        <GradientStop Color="#049BC3" Offset="0"/>
+        <GradientStop Color="#217BBB" Offset="0.5"/>
+        <GradientStop Color="#2E52B5" Offset="1"/>
+    </LinearGradientBrush>
     <SolidColorBrush x:Key="PanelSeparatorBrush" Color="{DynamicResource PanelSeparatorColor}" />
     <SolidColorBrush x:Key="CheckBoxCheckMarkBkBrush" Color="{DynamicResource MainColorDark}" />
 
